Sidebar now managed scrolling & max height internally, to work around bug in OS X Mavericks (and others, I suspect) associated with setting overflow=scroll before there's anything to scroll.
git-svn-id: file:///Users/craser/Development/svnroot/KukidoBlog@395 ca067221-1ae6-4d9b-88d4-2c81356bceaf

--- a/WebContent/css/trailheadmap.css
+++ b/WebContent/css/trailheadmap.css
@@ -31,5 +31,5 @@
   width: 250px;
   height: auto;
   max-height: 100%;
-  overflow: scroll;
+  overflow: hidden; /* We monkey with this in sidebar.js */
 }
